Updated touch control methods and added "Add 1" option to the Generate button's context menu

--- a/app/src/main/res/menu/contextmenu_generate.xml
+++ b/app/src/main/res/menu/contextmenu_generate.xml
@@ -9,6 +9,12 @@
         android:enabled="true"
         android:visible="true" />
     <item
+        android:id="@+id/action_add1"
+        android:title="@string/action_add"
+        android:titleCondensed="@string/action_add"
+        android:enabled="true"
+        android:visible="true" />
+    <item
         android:id="@+id/action_add"
         android:title="@string/action_add"
         android:titleCondensed="@string/action_add"
