Add and modify game elements and fundamentals

--- a/app/src/main/res/xml/fundamentals.xml
+++ b/app/src/main/res/xml/fundamentals.xml
@@ -4,38 +4,56 @@
         <element name="Ability" />
         <element name="AI" keepCaps="true" />
         <element name="Ally" />
+        <element name="Alternative" />
         <element name="Animation" />
+        <element name="Anticipation" />
         <element name="Attack" />
         <element name="Audio" />
         <element name="Balance" />
+        <element name="Beginning" />
         <element name="Building" />
+        <element name="Certainty" />
         <element name="Change" />
         <element name="Character" />
         <element name="Choice" />
         <element name="Communication" />
         <element name="Competition" />
+        <element name="Completion" />
         <element name="Cooperation" />
         <element name="Creation" />
         <element name="Customization" />
-        <element name="Defence" />
+        <element name="Defense" />
         <element name="Destruction" />
+        <element name="Deterioration" />
+        <element name="Difference" />
         <element name="Difficulty" />
         <element name="Distance" />
+        <element name="Durability" />
+        <element name="Duration" />
+        <element name="End" />
         <element name="Enemy" />
+        <element name="Exchange" />
         <element name="Failure" />
         <element name="Feedback" />
+        <element name="Flight" />
         <element name="Focus" />
+        <element name="Fun" />
         <element name="Future" />
-        <element name="Ground" />
+        <element name="Hardware" />
         <element name="Hazard" />
-        <element name="Healing" />
+        <element name="Health" />
         <element name="Help" />
+        <element name="Importance" />
         <element name="Improvement" />
         <element name="Information" />
         <element name="Input" />
         <element name="Item" />
+        <element name="Learning" />
+        <element name="Level" />
+        <element name="Light" />
         <element name="Limit" />
         <element name="Map" />
+        <element name="Monetization" />
         <element name="Mood" />
         <element name="Movement" />
         <element name="Necessity" />
@@ -48,7 +66,9 @@
         <element name="Player" />
         <element name="Problem" />
         <element name="Progress" />
+        <element name="Quality" />
         <element name="Randomness" />
+        <element name="Reaction" />
         <element name="Repetition" />
         <element name="Replayability" />
         <element name="Resource" />
@@ -57,19 +77,24 @@
         <element name="Save system" />
         <element name="Score" />
         <element name="Searching" />
+        <element name="Settings" />
         <element name="Sight" />
+        <element name="Similarity" />
         <element name="Skill" />
-        <element name="Sky" />
         <element name="Solution" />
         <element name="Spawning" />
         <element name="Story" />
+        <element name="Strategy" />
         <element name="Strength" />
+        <element name="Success" />
         <element name="Surprise" />
         <element name="Team" />
+        <element name="Terrain" />
         <element name="Territory" />
         <element name="Time" />
         <element name="Tool" />
         <element name="Turn" />
+        <element name="Unknown" />
         <element name="Variety" />
         <element name="Vehicle" />
         <element name="Visuals" />
