Add and modify fundamentals

--- a/app/src/main/res/xml/fundamentals.xml
+++ b/app/src/main/res/xml/fundamentals.xml
@@ -11,6 +11,8 @@
         <element name="Audio" />
         <element name="Balance" />
         <element name="Beginning" />
+        <element name="Benefit" />
+        <element name="Bonus" />
         <element name="Building" />
         <element name="Certainty" />
         <element name="Change" />
@@ -35,8 +37,9 @@
         <element name="Exchange" />
         <element name="Failure" />
         <element name="Feedback" />
-        <element name="Flight" />
+        <element name="Flying" />
         <element name="Focus" />
+        <element name="Freedom" />
         <element name="Fun" />
         <element name="Future" />
         <element name="Hardware" />
@@ -47,15 +50,19 @@
         <element name="Improvement" />
         <element name="Information" />
         <element name="Input" />
+        <element name="Inventory" />
         <element name="Item" />
         <element name="Learning" />
         <element name="Level" />
         <element name="Light" />
         <element name="Limit" />
+        <element name="Long-term" />
         <element name="Map" />
         <element name="Monetization" />
         <element name="Mood" />
+        <element name="Motivation" />
         <element name="Movement" />
+        <element name="Multiplayer" />
         <element name="Necessity" />
         <element name="Objective" />
         <element name="Obstacle" />
@@ -72,29 +79,34 @@
         <element name="Repetition" />
         <element name="Replayability" />
         <element name="Resource" />
+        <element name="Restarting" />
         <element name="Reward" />
         <element name="Rule" />
         <element name="Save system" />
         <element name="Score" />
         <element name="Searching" />
         <element name="Settings" />
+        <element name="Short-term" />
         <element name="Sight" />
         <element name="Similarity" />
         <element name="Skill" />
+        <element name="Social" />
         <element name="Solution" />
         <element name="Spawning" />
         <element name="Story" />
         <element name="Strategy" />
-        <element name="Strength" />
         <element name="Success" />
         <element name="Surprise" />
+        <element name="System" />
         <element name="Team" />
         <element name="Terrain" />
         <element name="Territory" />
+        <element name="Theme" />
         <element name="Time" />
         <element name="Tool" />
         <element name="Turn" />
         <element name="Unknown" />
+        <element name="Unlock" />
         <element name="Variety" />
         <element name="Vehicle" />
         <element name="Visuals" />
